<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/question" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1" />

            <RadioButton
                android:id="@+id/radio_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2" />

            <RadioButton
                android:id="@+id/radio_answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3" />

            <RadioButton
                android:id="@+id/radio_answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
